# fast-telemetry-analyzer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: TelemetryAnalyzer.hpp
src/: main.cpp
